[project]
name = "cardinal-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
extend-select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
